// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process JSON nodes correctly coerces an id field to always be a String 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "12345",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "TestsJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process JSON nodes correctly coerces an id field to always be a String 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "12345",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "TestsJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__",
        "children": Array [],
        "content": "{\\"id\\":12345,\\"blue\\":true,\\"funny\\":\\"yup\\"}",
        "dir": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "File",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates a node from JSON which is a single object 1`] = `
Array [
  Array [
    Object {
      "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__/data/Gatsby-Logo.png",
      "ext": ".png",
      "extension": "png",
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "JsonNameImageCard",
      },
      "name": "Gatsby-Logo",
    },
  ],
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "foo",
      "img": "./data/Gatsby-Logo.png",
      "img-image": Object {
        "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__/data/Gatsby-Logo.png",
        "ext": ".png",
        "extension": "png",
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "JsonNameImageCard",
        },
        "name": "Gatsby-Logo",
      },
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "TestsJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates a node from JSON which is a single object 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "foo",
        "img": "./data/Gatsby-Logo.png",
        "img-image": Object {
          "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__/data/Gatsby-Logo.png",
          "ext": ".png",
          "extension": "png",
          "id": "uuid-from-gatsby",
          "internal": Object {
            "contentDigest": "contentDigest",
            "type": "JsonNameImageCard",
          },
          "name": "Gatsby-Logo",
        },
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "TestsJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__",
        "children": Array [],
        "content": "{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\",\\"img\\":\\"./data/Gatsby-Logo.png\\"}",
        "dir": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "File",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates a node from JSON which is a single object and doesn't come from fs 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "foo",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NotFileJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates a node from JSON which is a single object and doesn't come from fs 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "foo",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NotFileJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\"}",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "NotFile",
        },
        "parent": null,
      },
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates nodes from JSON which is an array of objects 1`] = `
Array [
  Array [
    Object {
      "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__/data/Gatsby-Logo.png",
      "ext": ".png",
      "extension": "png",
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "JsonNameImageCard",
      },
      "name": "Gatsby-Logo",
    },
  ],
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "foo",
      "img": "./data/Gatsby-Logo.png",
      "img-image": Object {
        "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__/data/Gatsby-Logo.png",
        "ext": ".png",
        "extension": "png",
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "JsonNameImageCard",
        },
        "name": "Gatsby-Logo",
      },
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameJson",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__/data/Gatsby-Logo.png",
      "ext": ".png",
      "extension": "png",
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "JsonNameImageCard",
      },
      "name": "Gatsby-Logo",
    },
  ],
  Array [
    Object {
      "blue": false,
      "c": "./data/Gatsby-Logo.png",
      "c-image": Object {
        "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__/data/Gatsby-Logo.png",
        "ext": ".png",
        "extension": "png",
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "JsonNameImageCard",
        },
        "name": "Gatsby-Logo",
      },
      "children": Array [],
      "funny": "nope",
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NodeNameJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates nodes from JSON which is an array of objects 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "foo",
        "img": "./data/Gatsby-Logo.png",
        "img-image": Object {
          "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__/data/Gatsby-Logo.png",
          "ext": ".png",
          "extension": "png",
          "id": "uuid-from-gatsby",
          "internal": Object {
            "contentDigest": "contentDigest",
            "type": "JsonNameImageCard",
          },
          "name": "Gatsby-Logo",
        },
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__",
        "children": Array [],
        "content": "[{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\",\\"img\\":\\"./data/Gatsby-Logo.png\\"},{\\"blue\\":false,\\"funny\\":\\"nope\\",\\"c\\":\\"./data/Gatsby-Logo.png\\"}]",
        "dir": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "File",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "blue": false,
        "c": "./data/Gatsby-Logo.png",
        "c-image": Object {
          "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__/data/Gatsby-Logo.png",
          "ext": ".png",
          "extension": "png",
          "id": "uuid-from-gatsby",
          "internal": Object {
            "contentDigest": "contentDigest",
            "type": "JsonNameImageCard",
          },
          "name": "Gatsby-Logo",
        },
        "children": Array [],
        "funny": "nope",
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NodeNameJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "absolutePath": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__",
        "children": Array [],
        "content": "[{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\",\\"img\\":\\"./data/Gatsby-Logo.png\\"},{\\"blue\\":false,\\"funny\\":\\"nope\\",\\"c\\":\\"./data/Gatsby-Logo.png\\"}]",
        "dir": "/Users/eloi/AERQ/gatsby-transformer-json-withimages/src/__tests__",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "File",
        },
        "name": "nodeName",
        "parent": null,
      },
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates nodes from JSON which is an array of objects and doesn't come from fs 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "foo",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NotFileJson",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "blue": false,
      "children": Array [],
      "funny": "nope",
      "id": "uuid-from-gatsby",
      "internal": Object {
        "contentDigest": "contentDigest",
        "type": "NotFileJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process JSON nodes correctly correctly creates nodes from JSON which is an array of objects and doesn't come from fs 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "foo",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NotFileJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "[{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\"},{\\"blue\\":false,\\"funny\\":\\"nope\\"}]",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "NotFile",
        },
        "parent": null,
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "blue": false,
        "children": Array [],
        "funny": "nope",
        "id": "uuid-from-gatsby",
        "internal": Object {
          "contentDigest": "contentDigest",
          "type": "NotFileJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "[{\\"id\\":\\"foo\\",\\"blue\\":true,\\"funny\\":\\"yup\\"},{\\"blue\\":false,\\"funny\\":\\"nope\\"}]",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/json",
          "type": "NotFile",
        },
        "parent": null,
      },
    },
  ],
]
`;
